# wasm-tinkering

./: Cargo.toml  shiat.txt  wasm-test.wasm
src/: code.rs  main.rs
src/data/: mod.rs
src/process/: memory.rs  mod.rs
src/work/: mod.rs
wasi-override/: Cargo.toml  polyfill.js
wasi-override/.cargo/: config.toml
wasi-override/src/: lib.rs  wasi_threading.rs
wasm-test/: Cargo.toml
wasm-test/.cargo/: config.toml
wasm-test/src/: lib.rs  main.rs
