[package]
name = "wasm-shit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
wasmtime = "4.0.0"
wasmtime-wasi = { version="4.0.0", features=["tokio"] }
tokio = {version="1.24.1", features=["full"]}

[workspace]
members = [
    "./wasi-override",
    "./wasm-test"
]
