[package]
name = "wasm-shit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
noak = "0.5.0"
zip = "0.6.6"
tokio = { version = "1.32.0", features = ["full"]}
dashmap = "5.5.3"
futures = "0.3.28"
peg = "0.8.1"
